fix: api and docs
