# pkg/handlers/auth.go
@@ -11,7 +11,6 @@ import (
 	"net/http"
 	"strings"
 
-	"github.com/TBD54566975/ssi-sdk/credential"
 	"github.com/go-playground/validator"
 )
 
@@ -33,7 +32,7 @@ func NewAuthHandler(ssiService *services.SsiClient, db *store.Store) *AuthHandle
 // @Accept  json
 // @Produce  json
 // @Param app_did query string true "Application DID"
-// @Param session_token query string true "Session Token"
+// @Param app_secret query string true "Application secret"
 // @Success 200 {object} map[string]string "Redirect URL for sign-up"
 // @Failure 400 {string} string "Bad request"
 // @Failure 500 {string} string "Internal server error"
@@ -47,17 +46,23 @@ func (h *AuthHandler) SignUpHandler(w http.ResponseWriter, r *http.Request) {
 	// Extract query parameters
 	queryParams := r.URL.Query()
 	appDid := queryParams.Get("app_did")
+	appSecret := queryParams.Get("app_secret")
 	fmt.Println("appDid", appDid)
 	fmt.Println("queryParams", queryParams)
+	appDetails, err := h.db.GetApp(appDid)
+	if err != nil {
+		http.Error(w, "app is invalid", http.StatusInternalServerError)
+		return
+	}
+	if appDetails.AppSceret != appSecret {
+		http.Error(w, "app secret is invalid", http.StatusInternalServerError)
+		return
+	}
 	auth, err := h.db.GetAuthProvider(appDid)
 	if err != nil {
 		http.Error(w, "app authentication is not configured yet", http.StatusInternalServerError)
 		return
 	}
-
-	fmt.Println("authDetails", auth)
-	//  session todo validate
-
 	// For demonstration, let's just send back these parameters
 	w.Header().Set("Content-Type", "application/json")
 	response := map[string]string{
@@ -69,12 +74,13 @@ func (h *AuthHandler) SignUpHandler(w http.ResponseWriter, r *http.Request) {
 
 // GetAccessToken godoc
 // @Summary Sign in or get access token to an application
-// @Description Handles the sign-in process using application DID, credential JWT, and session key.
+// @Description Handles the sign-in process using application DID, credential JWT.
 // @Tags User Access Management
 // @Accept json
 // @Produce json
-// @Param Authorization header string true "Authorization token" default(Bearer YOUR_ACCESS_TOKEN)
-// @Param application body models.GetAccessTokenRequest true "Application to create"
+// @Param app_did query string true "Application DID"
+// @Param app_secret query string true "Application secret"
+// @Param application body models.IssueOAuthCredential true "Application to create"
 // @Success 200 {object} models.GetAccessTokenResponse "Access Token"
 // @Failure 400 {string} string "Bad request"
 // @Failure 500 {string} string "Internal server error"
@@ -85,10 +91,25 @@ func (h *AuthHandler) GetAccessToken(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var validate = validator.New()
-	var appReq models.GetAccessTokenRequest
+	// Extract query parameters
+	queryParams := r.URL.Query()
+	appDid := queryParams.Get("app_did")
+	appSecret := queryParams.Get("app_secret")
 
-	err := json.NewDecoder(r.Body).Decode(&appReq)
+	appDetails, err := h.db.GetApp(appDid)
+	if err != nil {
+		http.Error(w, "app is invalid", http.StatusInternalServerError)
+		return
+	}
+	if appDetails.AppSceret != appSecret {
+		http.Error(w, "app secret is invalid", http.StatusInternalServerError)
+		return
+	}
+
+	var validate = validator.New()
+	var appReq models.IssueOAuthCredential
+
+	err = json.NewDecoder(r.Body).Decode(&appReq)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
@@ -103,7 +124,7 @@ func (h *AuthHandler) GetAccessToken(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	if oauthCred.Issuer != appReq.AppDID {
+	if oauthCred.Issuer != appDid {
 		http.Error(w, "incorrect oauth cred", http.StatusBadRequest)
 		return
 	}
@@ -113,12 +134,12 @@ func (h *AuthHandler) GetAccessToken(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	if policyCred.Issuer != appReq.AppDID {
+	if policyCred.Issuer != appDid {
 		http.Error(w, "incorrect policy cred", http.StatusBadRequest)
 		return
 	}
 
-	accessToken, err := utils.CreateAccessToken(appReq.AppDID, models.IssueOAuthCredentialResponse{
+	accessToken, err := utils.CreateAccessToken(appDid, models.IssueOAuthCredential{
 		OAuthCredential:  appReq.OAuthCredential,
 		PolicyCredential: appReq.PolicyCredential,
 	})
@@ -137,6 +158,8 @@ func (h *AuthHandler) GetAccessToken(w http.ResponseWriter, r *http.Request) {
 // @Tags User Access Management
 // @Accept  json
 // @Produce  json
+// @Param app_did query string true "Application DID"
+// @Param app_secret query string true "Application secret"
 // @Success 200 {string} string "implementation pending"
 // @Failure 405 {string} string "Only POST method is allowed"
 // @Router /request-access [post]
@@ -158,6 +181,8 @@ func (h *AuthHandler) RequestAccess(w http.ResponseWriter, r *http.Request) {
 // @Tags Permission Management
 // @Accept  json
 // @Produce  json
+// @Param app_did query string true "Application DID"
+// @Param app_secret query string true "Application secret"
 // @Success 200 {string} string "implementation pending"
 // @Failure 405 {string} string "Only PUT method is allowed"
 // @Router /grant-access [put]
@@ -176,6 +201,8 @@ func (h *AuthHandler) GrandAccess(w http.ResponseWriter, r *http.Request) {
 // @Tags Permission Management
 // @Accept  json
 // @Produce  json
+// @Param app_did query string true "Application DID"
+// @Param app_secret query string true "Application secret"
 // @Success 200 {string} string "implementation pending"
 // @Failure 405 {string} string "Only PUT method is allowed"
 // @Router /revoke-access [put]
@@ -206,6 +233,22 @@ func (h *AuthHandler) VerifyAccess(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, "Only GET method is allowed", http.StatusMethodNotAllowed)
 		return
 	}
+
+	// Extract query parameters
+	queryParams := r.URL.Query()
+	appDid := queryParams.Get("app_did")
+	appSecret := queryParams.Get("app_secret")
+
+	appDetails, err := h.db.GetApp(appDid)
+	if err != nil {
+		http.Error(w, "app is invalid", http.StatusInternalServerError)
+		return
+	}
+	if appDetails.AppSceret != appSecret {
+		http.Error(w, "app secret is invalid", http.StatusInternalServerError)
+		return
+	}
+
 	authHeader := r.Header.Get("Authorization")
 	if authHeader == "" {
 		http.Error(w, "Unauthorized: No Authorization header provided", http.StatusUnauthorized)
@@ -213,7 +256,6 @@ func (h *AuthHandler) VerifyAccess(w http.ResponseWriter, r *http.Request) {
 	}
 	// TODO:: hardcoded, should be based on policy schema ID, and application credential existence and user ownership
 	// the can be VP too
-	queryParams := r.URL.Query()
 	role := queryParams.Get("attribute") // warning: will work with role only
 	fmt.Println("role", role)
 	// Split the header to get the token part
@@ -231,11 +273,6 @@ func (h *AuthHandler) VerifyAccess(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	// TODO:: revokable check
-	appDetails, err := h.db.GetApp(claims.AppDID)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
 	_, _, oauthCred, err := utils.ParseVerifiableCredentialFromJWT(claims.CredentialJWTs.OAuthCredential.(string))
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
@@ -254,33 +291,89 @@ func (h *AuthHandler) VerifyAccess(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, "incorrect policy cred", http.StatusBadRequest)
 		return
 	}
-	if !isRoleExists(policyCred.CredentialSubject, role) {
-		http.Error(w, "do not have permission", http.StatusBadRequest)
+	if !utils.IsRoleExists(policyCred.CredentialSubject, role) {
+		http.Error(w, "false", http.StatusBadRequest)
 		return
 	}
 	w.Header().Set("Content-Type", "application/json")
-	json.NewEncoder(w).Encode("success")
+	json.NewEncoder(w).Encode("true")
 }
 
-func isRoleExists(cred credential.CredentialSubject, r string) bool {
-	// Extract the roles
-	roles, ok := cred["roles"].([]any)
-	if !ok {
-		fmt.Println("roles not found or not in expected format")
-		return false
+// GetAccessList godoc
+// @Summary Get Access list on the resource
+// @Description List the access for the user on the resource.
+// @Tags User Access Management
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Authorization token" default(Bearer YOUR_ACCESS_TOKEN)
+// @Success 200 {string} string "success"
+// @Failure 400 {string} string "Bad request"
+// @Failure 401 {string} string "Unauthorized"
+// @Failure 500 {string} string "Internal server error"
+// @Router /get-access-list [get]
+func (h *AuthHandler) GetAccessList(w http.ResponseWriter, r *http.Request) {
+	if r.Method != "GET" {
+		http.Error(w, "Only GET method is allowed", http.StatusMethodNotAllowed)
+		return
 	}
 
-	for _, roleInterface := range roles {
-		role, ok := roleInterface.(map[string]any)
-		if !ok {
-			fmt.Println("role is not in expected format")
-			continue
-		}
+	// Extract query parameters
+	queryParams := r.URL.Query()
+	appDid := queryParams.Get("app_did")
+	appSecret := queryParams.Get("app_secret")
 
-		roleName, ok := role["roleName"].(string)
-		if ok {
-			return (roleName == r)
-		}
+	appDetails, err := h.db.GetApp(appDid)
+	if err != nil {
+		http.Error(w, "app is invalid", http.StatusInternalServerError)
+		return
 	}
-	return false
+	if appDetails.AppSceret != appSecret {
+		http.Error(w, "app secret is invalid", http.StatusInternalServerError)
+		return
+	}
+
+	authHeader := r.Header.Get("Authorization")
+	if authHeader == "" {
+		http.Error(w, "Unauthorized: No Authorization header provided", http.StatusUnauthorized)
+		return
+	}
+	// Split the header to get the token part
+	headerParts := strings.Split(authHeader, " ")
+	if len(headerParts) != 2 || headerParts[0] != "Bearer" {
+		http.Error(w, "Unauthorized: Invalid Authorization header format", http.StatusUnauthorized)
+		return
+	}
+	// headerParts[1] contains the actual token
+	token := headerParts[1]
+
+	claims, err := utils.ValidateAccessToken(token)
+	if err != nil {
+		http.Error(w, "Unauthorized: Invalid access token", http.StatusUnauthorized)
+		return
+	}
+	// TODO:: revokable check
+	_, _, oauthCred, err := utils.ParseVerifiableCredentialFromJWT(claims.CredentialJWTs.OAuthCredential.(string))
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	if oauthCred.Issuer != appDetails.AppDID {
+		http.Error(w, "incorrect oauth cred", http.StatusBadRequest)
+		return
+	}
+	_, _, policyCred, err := utils.ParseVerifiableCredentialFromJWT(claims.CredentialJWTs.PolicyCredential.(string))
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	if policyCred.Issuer != appDetails.AppDID {
+		http.Error(w, "incorrect policy cred", http.StatusBadRequest)
+		return
+	}
+	appPolicy, _ := h.db.GetIssuedPolicy(appDid)
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(models.AccessList{
+		ApplicationPolicy: appPolicy.CredentialSubject,
+		UserAccessList:    policyCred.CredentialSubject,
+	})
 }
